# conquer2026

./: AGENTS.md  CLAUDE.md  Links.md  METADATA.md  UPDATES.md  git_homepage.md
.github/workflows/: ci-backend.yml
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/tests/: conftest.py  test_api.py  test_combat.py  test_magic.py  test_npc_ai.py
frontend/: Dockerfile  package-lock.json  package.json
new/: .dockerignore  README.md  UPDATES.md  docker-compose.yml  prompt_100.txt
new/backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
new/backend/alembic/versions/: 180b7cdd29c3_add_world_admins.py  a1b2c3d4e5f6_add_max_players_to_worlds.py
new/backend/app/: database.py  main.py
new/backend/app/core/: security.py
new/backend/app/engine/: combat.py  economy.py  events.py  magic.py  npc_ai.py  turn_processor.py  world_gen.py
new/backend/app/models/: __init__.py  artifact.py  caravan.py  city.py  message.py  nation.py  sector.py  user.py  world.py  world_event.py
new/backend/app/routers/: admin.py  auth.py  nations.py  sectors.py  worlds.py
new/backend/app/schemas/: auth.py  nation.py  world.py
new/backend/app/services/: turn_service.py  world_service.py
new/backend/tests/: conftest.py  test_api.py  test_auth.py  test_combat.py  test_economy.py  test_events.py  test_turn_processor.py  test_world_gen.py
new/docs/: admin.html  artifacts.html  classes.html  (+10 more)
original_code/: CONVERTING  Makefile.top  PATCH28  PROBLEMS  README
original_scripts/: build-debian.sh  build-melange.sh  test-alpine.sh  test-debian.sh
(+207 files in other folders)
